# bot

./: .gitignore  Cargo.toml  README.md  fumens.txt
benches/: benchmarks.rs
display/: game.py  gui.py  main.py
py_client/: app.py  board.py  client.py
src/: board.rs  bot.rs  command.rs  constants.rs  controller.rs  fumens.txt  game.rs  lib.rs  lookahead.rs  main.rs  piece.rs  piece_queue.rs  placement.rs  placement_list.rs  pruner.rs  server.rs  suggestion.rs  test_api.rs
tetris/: Cargo.toml
tetris/benches/: benchmarks.rs
tetris/src/: board.rs  book.rs  bot.rs  command.rs  command_controller.rs  communications.rs  constants.rs  controller.rs  errors.rs  game.rs  garbage.rs  human.rs  main.rs  opener.rs  piece.rs  placement.rs  players.rs  point_vector.rs  population.rs  queue.rs  versus.rs  weight.rs
