[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
rand = "0.8.5"
tungstenite = "0.16.0"
serde = { version = "1.0.78", features = ["derive"] }
serde_json = "1.0.78"
url = "2.2.2"
polynomial = "0.2.4"

