[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
polynomial = "0.2.4"
itertools = "0.11.0"
colored = "2.0.4"
num = "0.4.1"
num_cpus = "1.0"

tungstenite = "*"
serde = { version = "1.0.78", features = ["derive"] }
serde_json = "1.0.78"
tokio-tungstenite = "0.17.1"
tokio = { version = "1.19.2", features = ["full"] }
log = "0.4"
futures-util = { version = "0.3", features = ["sink", "std"] }
url = "2.2.2"
